--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
-Flask
-Flask-SocketIO
+autopep8==1.4.4
+Click==7.0
+Flask==1.1.1
+Flask-Login==0.4.1
+Flask-SocketIO==4.2.1
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+pycodestyle==2.5.0
+python-engineio==3.10.0
+python-socketio==4.3.1
+six==1.13.0
+Werkzeug==0.16.0
