--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 autopep8==1.4.4
 Click==7.0
+dnspython==1.16.0
+eventlet==0.25.1
 Flask==1.1.1
 Flask-Login==0.4.1
 Flask-SocketIO==4.2.1
+greenlet==0.4.15
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+monotonic==1.5
 pycodestyle==2.5.0
 python-engineio==3.10.0
 python-socketio==4.3.1
