--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\Betty Van\\Documents\\Learn Programming\\CS50\\project2\\myenv\\Scripts\\python.exe"
+    "python.pythonPath": "myenv\\Scripts\\python.exe"
 }
